[build-system]
requires = ["setuptools>=64.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["troubadour"]

[project]
name = "troubadeux"
version = "0.0.1"
authors = [
    { name="Vincent Lanore", email="vincent.lanore@gmail.com" },
]
description = "A small example package"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
]
dependencies = [
    "click",
    "jinja2",
]

[project.scripts]
troubadour = "troubadour.cli:main"