[build-system]
requires = ["setuptools>=64.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["troubadour"]

[project]
name = "troubadeux"
authors = [{ name="Vincent Lanore", email="vincent.lanore@gmail.com" }]
description = "A small example package"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
]
dependencies = [
    "click",
    "jinja2",
]
dynamic = ["version", "readme"]

[tool.setuptools.dynamic]
readme = {file = ["README.md"]}
version = {attr = "troubadour.VERSION"}

[project.scripts]
troubadour = "troubadour.cli:main"